# CradleWave

./: .gitignore  CradleWave_Case v5.stl  README.md  cloudbuild.yaml  station_example_main.c
.github/workflows/: build-and-deploy-vue.yml  ec2-docker.yml
CAD_Designs/: CradleWave_Case_Top v2.stl  CradleWave_Custom_PCB_Bottom.stl  CradleWave_Custom_PCB_Top.stl
arduino/cradle-wave/: .gitignore  compile_commands.json  firebase_nonsense_main.cpp  platformio.ini  working_main.cpp
arduino/cradle-wave/include/: defines.h
arduino/cradle-wave/src/: main.cpp
demo_board_python/: Full_Signal_Processor_S26.py  filtered.py  filtered_no_plot.py  raspi_final.py  requirements.txt
demo_board_python/helpers/: sock.py  websockets.py
local_testing/: docker-compose.yaml  ingestor.py  local_testing.py  pyproject.toml
mqtt_test/: cradlewave_mqtt_test.py  cradlewave_mqtt_test2.py  pyproject.toml
webdev/: .firebaserc  docker-compose.yml  firebase.json
webdev/backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
webdev/backend/app/: main.py
webdev/backend/exporter/: Dockerfile  exporter.py  pyproject.toml
webdev/backend/ingestor/: Dockerfile  a.out  ingest.py  ingestor.py  main.py  pyproject.toml  test.c
webdev/backend/processor/: Dockerfile  processor.py  pyproject.toml
webdev/backend/processor/helpers/: SignalProcessor.py
webdev/frontend/: .env  .env.development  .env.production  .eslintrc.js  .firebaserc  firebase.json  package-lock.json  package.json
webdev/frontend/public/: index.html
webdev/frontend/src/: App.vue  main.js
webdev/frontend/src/components/: ApiTest.vue  StatusMonitor.vue  api-test.vue  apitest.vue  breathingGraph.vue  devicetree.vue  filteredGraph.vue  firestore.vue  frameGraph.vue  hrGraph.vue  usertree.vue
webdev/frontend/src/utils/: firebase.js
