[project]
name = "mqtt-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "awsiot (>=0.1.3,<0.2.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "orjson (>=3.11.8,<4.0.0)",
    "awsiotsdk (>=1.28.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
