[project]
name = "exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "Colin Aten",email = "caten@udel.edu"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "awsiot (>=0.1.3,<0.2.0)",
    "awscrt (>=0.31.3,<0.32.0)",
    "redis (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
