[project]
name = "ingestor"
version = "0.1.0"
description = "Python container for ingesting data over MQTT to a redis container"
authors = [
    {name = "Colin Aten",email = "caten@udel.edu"}
]
requires-python = ">=3.12"
dependencies = [
    "redis (>=7.3.0,<8.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "awsiotsdk (>=1.28.2,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
