[project]
name = "backend"
version = "0.1.0"
description = "Backend for CradleWave, to be run on an amazon EC2 in a docker container"
authors = [
    {name = "Colin Aten",email = "caten@udel.edu"}
]
requires-python = ">=3.12"
dependencies = [
    "awsiot (>=0.1.3,<0.2.0)",
    "awscrt (>=0.31.2,<0.32.0)",
    "awsiotsdk (>=1.28.1,<2.0.0)",
    "google-cloud-firestore (>=2.24.0,<3.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "humanize (>=4.15.0,<5.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
